security_groups.tf
# Bastion : SSH depuis MON IP uniquement
resource "aws_security_group" "bastion" {
  name        = "sg-bastion"
  description = "SSH depuis mon IP"
  vpc_id      = data.aws_vpc.default.id

  ingress {
    description = "SSH from my IP"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [var.my_ip]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = { Name = "sg-bastion" }
}

# Cible : accessible uniquement depuis le SG du bastion
resource "aws_security_group" "cible" {
  name        = "sg-cible"
  description = "Acces depuis le bastion uniquement"
  vpc_id      = data.aws_vpc.default.id

  ingress {
    description     = "SSH from bastion"
    from_port       = 22
    to_port         = 22
    protocol        = "tcp"
    security_groups = [aws_security_group.bastion.id]
  }

  ingress {
    description     = "ICMP from bastion"
    from_port       = -1
    to_port         = -1
    protocol        = "icmp"
    security_groups = [aws_security_group.bastion.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = { Name = "sg-cible" }
}
